crates/hdk/tests/tests/hdk_extern/hdk_extern_infallible_invalid_return.stderr
error: infallible functions should return the inner type directly
 --> tests/tests/hdk_extern/hdk_extern_infallible_invalid_return.rs:4:17
  |
4 | fn zome_fn() -> ExternResult<String> {
  |                 ^^^^^^^^^^^^
